# magicsigner

./: CMakeLists.txt  LICENSE  README.md  library.cpp  library.def
